--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,14 +10,21 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".screens.AppParseActivity"
-            android:label="@string/app_name"
+            android:name=".screens.MainParseActivity"
+            android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".screens.AppParseActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.galtashma.parsedashboard.screens.MainParseActivity" />
         </activity>
         <activity
             android:name=".screens.ClassParseActivity"
@@ -37,6 +44,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.galtashma.parsedashboard.screens.ClassParseActivity" />
         </activity>
+
     </application>
 
 </manifest>
