--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,7 @@ apply plugin: 'io.fabric'
 repositories {
     maven { url 'https://maven.fabric.io/public' }
     maven { url 'https://dl.bintray.com/galtashma/maven' }
+    maven { url 'https://jitpack.io' }
 }
 
 
@@ -75,4 +76,6 @@ dependencies {
     compile ('com.gtr.stargazer:stargazer-sdk:0.1.10') {
         exclude group: 'com.parse', module: 'parse-android'
     }
+
+    implementation 'com.github.yehiahd:FastSave-Android:1.0.4'
 }
