--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_circle"
         android:roundIcon="@mipmap/ic_launcher_circle"
+        android:name=".ParseDashboardApplication"
 
         android:label="@string/app_name"
         android:supportsRtl="true"
