--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
         android:roundIcon="@mipmap/ic_launcher_circle"
         android:name=".ParseDashboardApplication"
 
+        android:networkSecurityConfig="@xml/network_security_config"
+
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
