Make app at least working again

--- a/Parse/build.gradle
+++ b/Parse/build.gradle
@@ -1,4 +1,4 @@
-import com.android.builder.core.BuilderConstants
+//import com.android.builder.core.BuilderConstants
 
 apply plugin: 'com.android.library'
 apply plugin: 'com.github.kt3k.coveralls'
@@ -24,11 +24,11 @@ buildscript {
 }
 
 android {
-    compileSdkVersion 26 //rootProject.ext.compileSdkVersion
+    compileSdkVersion 28 //rootProject.ext.compileSdkVersion
 
     defaultConfig {
         minSdkVersion 15 //rootProject.ext.minSdkVersion
-        targetSdkVersion 26 // rootProject.ext.targetSdkVersion
+        targetSdkVersion 28 // rootProject.ext.targetSdkVersion
         versionCode 1
         versionName project.version
         consumerProguardFiles 'release-proguard.pro'
@@ -64,39 +64,39 @@ dependencies {
     testImplementation "com.squareup.okhttp3:mockwebserver:$okhttpVersion"
 }
 
-android.libraryVariants.all { variant ->
-    def name = variant.buildType.name
-
-    def javadoc = task("javadoc${variant.name.capitalize()}", type: Javadoc) {
-        description "Generates Javadoc for $variant.name."
-        source = variant.javaCompile.source
-        ext.androidJar = "${android.sdkDirectory}/platforms/${android.compileSdkVersion}/android.jar"
-        classpath = files(variant.javaCompile.classpath.files) + files(ext.androidJar)
-
-        options.docletpath = [rootProject.file("./gradle/ExcludeDoclet.jar")]
-        options.doclet = "me.grantland.doclet.ExcludeDoclet"
-
-        options.linksOffline("http://d.android.com/reference", "${android.sdkDirectory}/docs/reference")
-        options.links("http://boltsframework.github.io/docs/android/")
-
-        exclude '**/BuildConfig.java'
-        exclude '**/R.java'
-        exclude '**/internal/**'
-    }
-
-    def javadocJar = task("javadocJar${variant.name.capitalize()}", type: Jar, dependsOn: "javadoc${variant.name.capitalize()}") {
-        classifier = 'javadoc'
-        from javadoc.destinationDir
-    }
-
-    if (name.equals(BuilderConstants.RELEASE)) {
-        artifacts.add('archives', javadocJar);
-    }
-}
+//android.libraryVariants.all { variant ->
+//    def name = variant.buildType.name
+//
+//    def javadoc = task("javadoc${variant.name.capitalize()}", type: Javadoc) {
+//        description "Generates Javadoc for $variant.name."
+//        source = variant.javaCompile.source
+//        ext.androidJar = "${android.sdkDirectory}/platforms/${android.compileSdkVersion}/android.jar"
+//        classpath = files(variant.javaCompile.classpath.files) + files(ext.androidJar)
+//
+//        options.docletpath = [rootProject.file("./gradle/ExcludeDoclet.jar")]
+//        options.doclet = "me.grantland.doclet.ExcludeDoclet"
+//
+//        options.linksOffline("http://d.android.com/reference", "${android.sdkDirectory}/docs/reference")
+//        options.links("http://boltsframework.github.io/docs/android/")
+//
+//        exclude '**/BuildConfig.java'
+//        exclude '**/R.java'
+//        exclude '**/internal/**'
+//    }
+//
+//    def javadocJar = task("javadocJar${variant.name.capitalize()}", type: Jar, dependsOn: "javadoc${variant.name.capitalize()}") {
+//        classifier = 'javadoc'
+//        from javadoc.destinationDir
+//    }
+//
+//    if (name.equals(BuilderConstants.RELEASE)) {
+//        artifacts.add('archives', javadocJar);
+//    }
+//}
 
 //region Maven
 
-apply plugin: 'maven'
+//apply plugin: 'maven'
 apply plugin: 'signing'
 
 def isSnapshot = version.endsWith('-SNAPSHOT')
@@ -127,29 +127,29 @@ def pomConfig = {
 }
 
 
-uploadArchives {
-    repositories.mavenDeployer {
-        beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
-
-        repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-            authentication(userName: ossrhUsername, password: ossrhPassword)
-        }
-
-        snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
-            authentication(userName: ossrhUsername, password: ossrhPassword)
-        }
-
-        def basePom = {
-            name projName
-            artifactId = artifact
-            packaging 'aar'
-            description projDescription
-            url gitLink
-        }
-
-        pom.project basePom << pomConfig
-    }
-}
+//uploadArchives {
+//    repositories.mavenDeployer {
+//        beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+//
+//        repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+//            authentication(userName: ossrhUsername, password: ossrhPassword)
+//        }
+//
+//        snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
+//            authentication(userName: ossrhUsername, password: ossrhPassword)
+//        }
+//
+//        def basePom = {
+//            name projName
+//            artifactId = artifact
+//            packaging 'aar'
+//            description projDescription
+//            url gitLink
+//        }
+//
+//        pom.project basePom << pomConfig
+//    }
+//}
 
 signing {
     required { !isSnapshot && gradle.taskGraph.hasTask("uploadArchives") }
@@ -175,31 +175,31 @@ jacoco {
     toolVersion "0.7.1.201405082137"
 }
 
-task jacocoTestReport(type: JacocoReport, dependsOn: "testDebugUnitTest") {
-    group = "Reporting"
-    description = "Generate Jacoco coverage reports"
-
-    classDirectories = fileTree(
-            dir: "${buildDir}/intermediates/classes/debug",
-            excludes: ['**/R.class',
-                       '**/R$*.class',
-                       '**/*$ViewInjector*.*',
-                       '**/BuildConfig.*',
-                       '**/Manifest*.*']
-    )
-
-    sourceDirectories = files("${buildDir.parent}/src/main/java")
-    additionalSourceDirs = files([
-            "${buildDir}/generated/source/buildConfig/debug",
-            "${buildDir}/generated/source/r/debug"
-    ])
-    executionData = files("${buildDir}/jacoco/testDebugUnitTest.exec")
-
-    reports {
-        xml.enabled = true
-        html.enabled = true
-    }
-}
+//task jacocoTestReport(type: JacocoReport, dependsOn: "testDebugUnitTest") {
+//    group = "Reporting"
+//    description = "Generate Jacoco coverage reports"
+//
+//    classDirectories = fileTree(
+//            dir: "${buildDir}/intermediates/classes/debug",
+//            excludes: ['**/R.class',
+//                       '**/R$*.class',
+//                       '**/*$ViewInjector*.*',
+//                       '**/BuildConfig.*',
+//                       '**/Manifest*.*']
+//    )
+//
+//    sourceDirectories = files("${buildDir.parent}/src/main/java")
+//    additionalSourceDirs = files([
+//            "${buildDir}/generated/source/buildConfig/debug",
+//            "${buildDir}/generated/source/r/debug"
+//    ])
+//    executionData = files("${buildDir}/jacoco/testDebugUnitTest.exec")
+//
+//    reports {
+//        xml.enabled = true
+//        html.enabled = true
+//    }
+//}
 
 //endregion
 
