--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,9 +76,6 @@ dependencies {
 //        transitive = true;
 //    }
 
-//    compile ('com.gtr.stargazer:stargazer-sdk:0.1.10') {
-//        exclude group: 'com.parse', module: 'parse-android'
-//    }
-
     implementation 'com.github.yehiahd:FastSave-Android:1.0.6'
+    implementation 'com.vorlonsoft:androidrate:1.2.1'
 }
