Complete rewrite to Kotlin

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
-buildscript {
+plugins {
+    id 'com.android.application'
+    id 'kotlin-android'
 }
-apply plugin: 'com.android.application'
 
 repositories {
     maven { url 'https://dl.bintray.com/galtashma/maven' }
@@ -31,13 +32,18 @@ android {
     }
 }
 
+configurations {
+    cleanedAnnotations
+    implementation.exclude group: 'org.jetbrains' , module:'annotations'
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     testImplementation 'junit:junit:4.13.1'
-    androidTestImplementation 'androidx.test:runner:1.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
